--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,6 +1,7 @@
 ---
 import * as CONFIG from '../config';
 import Head from '../components/head/Head.astro';
+import SkipLinks from '../components/Content/SkipLinks.astro';
 import type { MarkdownHeading } from 'astro';
 
 const {frontmatter} = Astro.props;
@@ -15,6 +16,7 @@ const imageAlt = frontmatter.bannerImage?.alt ?? CONFIG.OPEN_GRAPH.image.alt;
 <html dir={frontmatter.dir ?? 'ltr'} lang={frontmatter.lang ?? 'en'} class="initial">
     <Head frontmatter={frontmatter} />
     <body>
+        <SkipLinks lang={frontmatter.lang ?? 'en'} />
         <!-- 
             {% include skiplinks.html %}
             {% include header.html %}
