--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -1,5 +1,5 @@
 ---
-import t from '../../data/language.json';
+import t from '../Language/language.json';
 import { Language } from '../Language/language';
 
 const { lang } = Astro.props;
@@ -9,7 +9,7 @@ const skiplinks = t.skiplinks;
 const _ = (entry: { [key: string]: string }) => language.translate(entry);
 ---
 <nav class="skip-links" aria-label="skiplinks">
-    <a href="#site-nav">{_(skiplinks.skip_to_navigation)}</a>
-    <a href="#site-main">{_(skiplinks.skip_to_content)}</a>
-    <a href="#site-footer">{_(skiplinks.skip_to_footer)}</a>
+    <a href="#site-nav">{ _(skiplinks.skip_to_navigation) }</a>
+    <a href="#site-main">{ _(skiplinks.skip_to_content) }</a>
+    <a href="#site-footer">{ _(skiplinks.skip_to_footer) }</a>
   </nav>
