--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -2,7 +2,10 @@
 import t from '../Language/language.json';
 import { Language } from '../Language/language';
 
-const { lang } = Astro.props;
+type Props = {
+  lang: string;
+}
+const { lang } = Astro.props as Props;
 
 const language = new Language(lang);
 const skiplinks = t.skiplinks;
