--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -33,8 +33,6 @@ const textDirection = frontmatter.dir ?? 'ltr';
             </main>
         </div>
         <Footer lang={ lang } />
-        <!--
-            {% include javascripts.html %}
-        -->
+        <script src="/js/main.js" type="module" async></script>
     </body>
 </html>
