--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -37,6 +37,7 @@
     --code-font: Consolas, 'Courier New', Courier, monospace;
 
     --block-gap: 2rem;
+    --block-radius: 0.3rem;
 
     --marker-size: 1.2rem;
     --paragraph-margin: 1.2rem;
