--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,6 +69,7 @@ blockquote {
     position: relative;
     box-shadow: var(--box-shadow);
     margin: var(--paragraph-margin) 0;
+    border-radius: var(--block-radius);
 }
 
 blockquote::after {
@@ -155,6 +156,7 @@ table {
     border-collapse: collapse;
     border: 0.5px solid var(--fore);
     width: 100%;
+    border-radius: var(--block-radius);
 }
 
 thead tr {
@@ -473,10 +475,11 @@ code {
 
 pre.astro-code {
     border-left: 5px solid var(--fore);
-    padding: 1rem;
+    border-radius: var(--block-radius);
     font-family: var(--code-font);
-    overflow: auto;
     margin: 1em 0;
+    overflow: auto;
+    padding: 1rem;
 }
 
 pre.astro-code code {
