--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -2,20 +2,23 @@
 import t from '../Language/language.json';
 import { Language } from '../Language/language';
 import NavigationItem from './NavigationItem.astro';
-import { mapNavPage } from './NavPage.astro';
-import type { NavPage } from './NavPage.astro';
+import { mapNavPage } from '../../utilities/NavPage.astro';
+import type { NavPage } from '../../utilities/NavPage.astro';
 import type { MarkdownInstance } from 'astro';
 
+// Properties
 type Props = {
   lang: string;
 };
 const { lang } = Astro.props as Props;
 
+// Language
 const language = new Language(lang);
 const navigation = t.navigation;
 const aria = t.aria;
 const _ = (entry: { [key: string]: string }) => language.translate(entry);
 
+// Logic
 const currentUrl = new URL(Astro.request.url);
 const mapWithUrl = (page: MarkdownInstance<Record<string, any>>) => {
   return mapNavPage(page, currentUrl);
