--- a/src/components/Content/Footer.astro
+++ b/src/components/Content/Footer.astro
@@ -17,6 +17,16 @@ const _ = (entry: { [key: string]: string }) => language.translate(entry);
 // Logic
 // -
 ---
+<style>
+footer {
+    text-align: center;
+    padding: 0.5rem 0;
+    width: 100%;
+    color: var(--fore-head);
+    background-color: var(--aft-head);
+    margin: var(--block-gap) auto 0 auto;
+}
+</style>
 <footer id="site-footer">
   <p>{ _(footer.copyright) } &copy; { new Date().getFullYear() } { CONFIG.SITE.owner }</p>
 </footer>
