--- a/src/components/Content/Header.astro
+++ b/src/components/Content/Header.astro
@@ -17,6 +17,53 @@ const _ = (entry: { [key: string]: string }) => language.translate(entry);
 // Logic
 // -
 ---
+<style>
+/* Header */
+header {
+    color: var(--fore-head);
+    background-color: var(--aft-head);
+    text-align: center;
+    font-size: 2rem;
+    font-size: clamp(1.2em, 4vw, 2em);
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+a {
+    color: var(--link-head);
+    text-decoration: none;
+}
+
+a:hover,
+a:focus {
+    color: var(--link-alt-head);
+    background-color: unset;
+}
+
+.site-title {
+    letter-spacing: -1px;
+    text-transform: uppercase;
+    margin: 0 30px;
+    display: block;
+}
+
+.navigation-icon {
+    display: none;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    stroke: var(--link-head);
+}
+
+.search-icon {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    stroke: var(--link-head);
+}
+</style>
 <header class="site-header">
   <a href="#site-nav" class="navigation-icon" title={ _(header.open_menu) }><svg xmlns="http://www.w3.org/2000/svg" 
     width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" 
