--- a/src/components/Content/Breadcrumbs.astro
+++ b/src/components/Content/Breadcrumbs.astro
@@ -64,6 +64,12 @@ a[aria-current] {
     color: var(--fore);
     text-decoration: none;
 }
+
+@media (max-width: 860px) {
+  ol {
+    text-align: center;
+  }
+}
 </style>
 <nav class="site-breadcrumbs" aria-label={ _(aria.breadcrumbs) }>
   <ol vocab="http://schema.org/" typeof="BreadcrumbList">
