--- a/src/components/Content/Footer.astro
+++ b/src/components/Content/Footer.astro
@@ -26,6 +26,9 @@ footer {
     background-color: var(--aft-head);
     margin: var(--block-gap) auto 0 auto;
 }
+
+@media (max-width: 860px) {
+}
 </style>
 <footer id="site-footer">
   <p>{ _(footer.copyright) } &copy; { new Date().getFullYear() } { CONFIG.SITE.owner }</p>
