--- a/src/components/Content/Header.astro
+++ b/src/components/Content/Header.astro
@@ -63,6 +63,12 @@ a:focus {
     right: 10px;
     stroke: var(--link-head);
 }
+
+@media (max-width: 860px) {
+  .navigation-icon {
+    display: block;
+  }
+}
 </style>
 <header class="site-header">
   <a href="#site-nav" class="navigation-icon" title={ _(header.open_menu) }><svg xmlns="http://www.w3.org/2000/svg" 
