--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -44,6 +44,9 @@ a:focus {
     overflow: visible;
     width: auto;
 }
+
+@media (max-width: 860px) {
+}
 </style>
 <nav class="skip-links" aria-label="skiplinks">
     <a href="#site-nav">{ _(skiplinks.skip_to_navigation) }</a>
