--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,13 +1,16 @@
 ---
-import * as CONFIG from '../config';
+import type { Frontmatter } from '../config';
 import Head from '../components/head/Head.astro';
 import SkipLinks from '../components/Content/SkipLinks.astro';
 import Breadcrumbs from '../components/Content/Breadcrumbs.astro';
-import Navigation from '../components/Content/Navigation.astro';
 import Header from '../components/Content/Header.astro';
 import Footer from '../components/Content/Footer.astro';
+import ContentGroup from '../components/Content/ContentGroup.astro';
 
-const { frontmatter } = Astro.props;
+type Props = {
+    frontmatter: Frontmatter
+}
+const { frontmatter } = Astro.props as Props;
 
 const lang = frontmatter.lang ?? 'en';
 const textDirection = frontmatter.dir ?? 'ltr';
@@ -18,19 +21,9 @@ const textDirection = frontmatter.dir ?? 'ltr';
         <SkipLinks lang={ lang } />
         <Header lang={ lang } />
         <Breadcrumbs lang={ lang } />
-        <div class="content-group">
-            <Navigation lang={ lang } />
-            <main id="site-main">
-                <article>
-                    <header>
-                        <h1>{ frontmatter.title ?? CONFIG.SITE.title }</h1>
-                    </header>
-                    <div>
-                        <slot />
-                    </div>
-                </article>
-            </main>
-        </div>
+        <ContentGroup lang={ lang } frontmatter={ frontmatter }>
+            <slot />
+        </ContentGroup>
         <Footer lang={ lang } />
         <script src="/js/main.js" type="module" async></script>
     </body>
