--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -5,9 +5,9 @@ import { Language } from '../components/Language/language';
 import Head from '../components/head/Head.astro';
 import SkipLinks from '../components/Content/SkipLinks.astro';
 import Breadcrumbs from '../components/Content/Breadcrumbs.astro';
-import Navigation from '../components/Content/Navigation.astro';
 import Header from '../components/Content/Header.astro';
 import Footer from '../components/Content/Footer.astro';
+import ContentGroup from '../components/Content/ContentGroup.astro';
 
 // Properties
 const { frontmatter } = Astro.props;
@@ -22,38 +22,35 @@ const _ = (entry: { [key: string]: string }) => language.translate(entry);
 // Logic
 const siteUrl = Astro.site ? Astro.site.href : '';
 ---
+<style>
+@media (max-width: 860px) {
+    form.site-search div {
+        grid-template-columns: repeat(1, auto);
+    }    
+}
+</style>
 <html dir={ textDirection } lang={ lang } class="initial">
     <Head frontmatter={ frontmatter } />
     <body>
         <SkipLinks lang={ lang } />
         <Header lang={ lang } />
         <Breadcrumbs lang={ lang } />
-        <div class="content-group">
-            <Navigation lang={ lang } />
-            <main id="site-main">
-                <article>
-                    <header>
-                        <h1>{ frontmatter.title ?? CONFIG.SITE.title }</h1>
-                    </header>
+        <ContentGroup lang={ lang } frontmatter={frontmatter}>
+            <slot />
+            <form method="GET" action={ CONFIG.SITE.search.fallbackUrl ?? 'https://www.google.com/search' } role="search" id="site-search" class="site-search note" autocomplete="off">
+                <fieldset>
+                    <input type="hidden" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } value={ siteUrl } />
                     <div>
-                        <slot />
-    <form method="GET" action={ CONFIG.SITE.search.fallbackUrl ?? 'https://www.google.com/search' } role="search" id="site-search" class="site-search note" autocomplete="off">
-        <fieldset>
-            <input type="hidden" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } value={ siteUrl } />
-            <div>
-              <label for="site-search-query">{ _(search.search_for) }</label>
-              <input type="text" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } id="site-search-query" autofocus="autofocus" />
-              <button id="site-search-button" type="submit">{ _(search.submit) }</button>
-            </div>
-        </fieldset>
-    </form>
-    <div id="site-search-results" data-title={ _(search.results_title) } data-emptytitle={ _(search.no_results_title) }>
-    </div>
-    <script src="/js/search.js" type="module" async></script>
+                    <label for="site-search-query">{ _(search.search_for) }</label>
+                    <input type="text" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } id="site-search-query" autofocus="autofocus" />
+                    <button id="site-search-button" type="submit">{ _(search.submit) }</button>
                     </div>
-                </article>
-            </main>
-        </div>
+                </fieldset>
+            </form>
+            <div id="site-search-results" data-title={ _(search.results_title) } data-emptytitle={ _(search.no_results_title) }>
+            </div>
+            <script src="/js/search.js" type="module" async></script>
+        </ContentGroup>
         <Footer lang={ lang } />
         <script src="/js/main.js" type="module" async></script>
     </body>
