--- a/src/components/Content/ContentGroup.astro
+++ b/src/components/Content/ContentGroup.astro
@@ -31,6 +31,10 @@ main {
     width: calc(var(--grid-width) - var(--navigation-width) - var(--grid-gap));
 }
 
+main h1 {
+    margin-top: 0.1em;
+}
+
 main ul, main ol {
     margin: var(--paragraph-margin) 0 var(--paragraph-margin) 1.2rem;
 }
