--- a/src/components/Content/NavigationItem.astro
+++ b/src/components/Content/NavigationItem.astro
@@ -17,6 +17,45 @@ const _ = (entry: { [key: string]: string }) => language.translate(entry);
 // Logic
 // -
 ---
+<style>
+li {
+    list-style: none;
+}
+
+a {
+    text-indent: var(--marker-size);
+    width: calc(100% - 2rem);
+    display: inline-block;
+    padding: 0.5rem 1rem;
+}
+
+li.has-children summary span {
+    text-indent: 0;
+    width: calc(100% - 2rem - var(--marker-size));
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    text-decoration: underline;
+}
+
+li.has-children ul a {
+    width: calc(100% - 2rem);
+    text-indent: calc(var(--marker-size) * 2);
+}
+
+a[aria-current] {
+    font-weight: bold;
+}
+
+details summary {
+    cursor: pointer;
+}
+
+details summary::-webkit-details-marker,
+details summary::marker {
+    font-size: var(--marker-size);
+    width: 1em;
+}
+</style>
 {(navPage.children.length == 0) && (
 <li>
   <a href={ navPage.url } aria-current={ navPage.ariaCurrent }>{ navPage.title }</a>
